--- a/JqueryCheckpoint/index.html
+++ b/JqueryCheckpoint/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<div id ="div">
     <p id="para"> 
             Un paragraphe est une section de texte en prose vouée au développement d'un point particulier souvent
             au moyen de plusieurs phrases, dans la continuité du précédent et du suivant.
@@ -15,11 +15,11 @@
              un saut de ligne.
             Le symbole du paragraphe est §. La fin d'un paragraphe était autrefois indiquée par un pied-de-mouche  
     </p>
+</div>
 
-    <button onclick="bold()">Bold</button>
-    <button onclick="italic()">Italic </button>
-    <button onclick="underlined()">Underlined </button>
-
+    <button  id="b" onclick="bold()">Bold</button>
+    <button id="i" onclick="italic()">Italic </button>
+  
    
     <select  id="font" onchange ="myFont()"> 
         <option value="bold">bold</option>
